refactor: simplify collection handling by using toList() method